# ravebot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  bot_data  fly.toml  main.py  pyproject.toml  requirements-dev.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/: copilot-instructions.md
.github/agents/: nick-the-geek.agent.md
.github/skills/appinsights-instrumentation/: SKILL.md
.github/skills/azure-devops-cli/: SKILL.md
.github/skills/azure-resource-visualizer/: SKILL.md
.github/skills/legacy-circuit-mockups/references/: 555.md
.github/workflows/: azure-deploy.yml  fly.yml  test.yml
apps/bot/: .dockerignore  Dockerfile  crud.py  db_engine.py  dice.py  events_calendar.py  fly.toml  graphql_query_template.json  main.py  models.py  ra.py  requirements.txt  settings.py  text.py  utils.py
apps/bot/tests/: __init__.py  test_dice.py  test_events_calendar.py  test_main.py  test_models.py  test_ra.py  test_settings.py  test_utils.py
apps/db/: fly.toml
apps/updater/: crud.py  db_engine.py  fly.toml  main.py  models.py  requirements.txt  settings.py
docs/superpowers/specs/: 2026-06-05-update-mechanism-design.md
