[project]
name = "ravebot"
version = "1.0.0"
description = "Telegram bot for managing rave events and community"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120

# Assume Python 3.9+
target-version = "py39"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".eggs",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "ISC", "ICN", "PIE", "PYI", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "RUF"]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "TRY003",  # Avoid specifying long messages outside the exception class
    "PLR0913",  # Too many arguments to function call
]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# Ignore missing imports for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "bs4.*",
    "dotenv.*",
]
ignore_missing_imports = true
